--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wedding Invitation</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet"><!-- Slick CSS -->
@@ -15,7 +15,24 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 <body>
-    <div class="page-container">
+
+    <div class="initial-screen" id="initialScreen">
+        <div class="initial-content">
+            <div class="initial-header">
+                <h2>THE WEDDING OF</h2>
+                <h1>Santi & Dhoni</h1>
+            </div>
+            <div class="initial-image">
+                <div class="initial-photo"></div>
+            </div>
+            <div class="initial-details">
+                <p>Kepada Bapak/Ibu/Saudara/i</p>
+                <p><strong id="guestName">Nama Tamu</strong></p>
+            </div>
+            <button class="btn btn-primary" id="openInvitation">Buka Undangan</button>
+        </div>
+    </div>
+    <div class="page-container" id="pageContainer">
         <!-- First Page -->
         <div class="page page1" id="page1">
             <div class="header text-brown">
@@ -140,15 +157,15 @@
                 </div>
             </div>
         </div>
+        <div class="icons">
+            <a href="#page1" class="home-icon"><i class="fas fa-home bounce"></i></a>
+            <a href="#page2" class="heart-icon"><i class="fas fa-heart bounce"></i></a>
+            <a href="#page3" class="calendar-icon"><i class="fas fa-calendar-alt bounce"></i></a>
+            <a href="#page4" class="gallery-icon"><i class="fas fa-images"></i></a>
+            <a href="#"><i class="fas fa-comment"></i></a>
+        </div>
     </div>
 
-    <div class="icons">
-        <a href="#page1" class="home-icon"><i class="fas fa-home bounce"></i></a>
-        <a href="#page2" class="heart-icon"><i class="fas fa-heart bounce"></i></a>
-        <a href="#page3" class="calendar-icon"><i class="fas fa-calendar-alt bounce"></i></a>
-        <a href="#page4" class="gallery-icon"><i class="fas fa-images"></i></a>
-        <a href="#"><i class="fas fa-comment"></i></a>
-    </div>
 
     <script src="js/script.js"></script>
     <!-- Bootstrap JS -->
@@ -177,5 +194,29 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
+  </script>
+  <script>
+      $(document).ready(function() {
+        function getUrlParameter(name) {
+            name = name.replace(/[\[]/, '\\[').replace(/[\]]/, '\\]');
+            var regex = new RegExp('[\\?&]' + name + '=([^&#]*)');
+            var results = regex.exec(location.search);
+            return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '));
+        }
+
+        // Get the 'n' parameter from URL
+        var guestName = getUrlParameter('n');
+        if (guestName) {
+            $('#guestName').text(guestName);
+        }
+
+          $('#pageContainer').hide();
+
+          $('#openInvitation').click(function() {
+              $('#initialScreen').fadeOut(function() {
+                  $('#pageContainer').fadeIn();
+              });
+          });
+      });
   </script>
 </html>
