--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wedding Invitation</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet"><!-- Slick CSS -->
@@ -67,18 +68,18 @@
                 <h2>Assalamualaikum Wr. Wb.</h2>
                 <p>Tanpa mengurangi rasa hormat, kami mengundang Bapak/Ibu/Saudara/i serta Kerabat sekalian untuk menghadiri acara pernikahan kami:</p>
             </div>
-            <div class="image-container d-flex justify-content-center">
+            <div class="image-container-female d-flex justify-content-center">
                 <!-- <img src="https://via.placeholder.com/150" alt="Adiba Putri Syakila"> -->
             </div>
             <div class="details text-center">
                 <h1>Santi Asih</h1>
                 <p>Putri Kedua Bapak Harjono & Ibu Diyyah</p>
             </div>
-            <div class="image-container d-flex justify-content-center">
+            <div class="image-container-male d-flex justify-content-center">
                 <!-- <img src="https://via.placeholder.com/150" alt="Habib Yogatama"> -->
             </div>
             <div class="details text-center">
-                <h1>Habib Yogatama</h1>
+                <h1>Muhammad Romadhoni</h1>
                 <p>Putra Kedua Bapak Narisan & Ibu Mujiatun</p>
             </div>
             <div class="love-story text-center">
@@ -130,13 +131,13 @@
             <div class="gallery-section">
                 <div class="gallery-slider">
                     <div class="gallery-image">
-                        <img src="https://via.placeholder.com/150" alt="Gallery Image 1">
+                        <img src="https://picsum.photos/150" alt="Gallery Image 1">
                     </div>
                     <div class="gallery-image">
-                        <img src="https://via.placeholder.com/150" alt="Gallery Image 2">
+                        <img src="https://picsum.photos/150" alt="Gallery Image 2">
                     </div>
                     <div class="gallery-image">
-                        <img src="https://via.placeholder.com/150" alt="Gallery Image 3">
+                        <img src="https://picsum.photos/150" alt="Gallery Image 3">
                     </div>
                 </div>
             </div>
